# nxp-multiproject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mcux_include.json
app1/: CMakeLists.txt  config.cmake  main.c
app2/: CMakeLists copy.txt  CMakeLists.txt  main.c
